# petrovich-c

./: .clang-format  .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  amalgamate.py  petrovich.c  petrovich.h  rebuild.sh  test.c  test.py  utf8.c  utf8.h
include/: petrovich.h
lib/: buffer.h  petrovich.c  utf8.c  utf8.h
test/: test.c
